IggyCloudResources/k8s-local/legacy/k8s-web-view.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-web-view
  labels:
    app: k8s-web-view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-web-view
  template:
    metadata:
      labels:
        app: k8s-web-view
    spec:
      serviceAccountName: k8s-web-view
      containers:
      - name: k8s-web-view
        image: hjacobs/kube-web-view
        args:
        - --port=8080
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-web-view
spec:
  type: LoadBalancer
  selector:
    app: k8s-web-view
  ports:
  - port: 8080
    targetPort: 8080
