IggyCloudResources/k8s-local/legacy/pgweb-pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
  labels:
    app: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      containers:
      - name: pgweb
        image: sosedoff/pgweb
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: pgweb
spec:
  type: LoadBalancer
  selector:
    app: pgweb
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: LoadBalancer
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
