IggyCloudResources/k8s-local/legacy/simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp
            port:
              number: 8080
      - path: /identity(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: identity-api
            port:
              number: 8080
